<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CandleKeep</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="txtIsbn">ISBN</string>
    <string name="txtTitulo">Title</string>
    <string name="txtPubDate">Publication Date</string>
    <string name="txtPages">Pages</string>
    <string name="txtBtnNvoLibro">New</string>
    <string name="txtEdtLibro">Edit</string>
    <string name="txtElmLibro">Delete</string>
    <string name="txtAutores">Authors</string>
    <string name="txtCategorias">Categories</string>
    <string name="title_activity_editar_libro">EditarLibroActivity</string>
    <string name="btnGuardar">Save</string>
    <string name="btnCancel">Cancel</string>
    <string name="strErrorISBN">You must set a ISBN for the book.</string>
    <string name="strErrorTitulo">You must set a title for the book.</string>
    <string name="strErrorFechaPublicacion">You must set a publish date for the book.</string>
    <string name="strErrorCantPaginas">You must set page count for the book.</string>
    <string name="strErrorSelLibro">You must select a book for edition.</string>
    <string name="title_activity_asignar_autores">AsignarAutoresActivity</string>
    <string name="txtAdminAutores">Manage Authors</string>
    <string name="txtAdminCategorias">Manage Categories</string>
    <string name="txtAgregar">Add</string>
    <string name="txtQuitar">Remove</string>
    <string name="title_activity_abmautores">ABMAutoresActivity</string>

</resources>
