<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditarLibroActivity" >

    <Button
        android:id="@+id/editarLibro_buttonGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/btnGuardar" />

    <Button
        android:id="@+id/editarLibro_buttonCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/btnCancel" />

    <TextView
        android:id="@+id/editarLibro_lblIsbn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/txtIsbn"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editarLibro_etxIsbn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editarLibro_lblIsbn"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editarLibro_lblIsbn"
        android:layout_weight="1"
        android:ems="10" />

    <TextView
        android:id="@+id/editarLibro_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editarLibro_etxTitulo"
        android:layout_below="@+id/editarLibro_etxIsbn"
        android:text="@string/txtTitulo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editarLibro_etxTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editarLibro_etxPubDate"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editarLibro_textView2"
        android:layout_weight="1"
        android:ems="10" />

    <TextView
        android:id="@+id/editarLibro_textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editarLibro_etxPubDate"
        android:layout_below="@+id/editarLibro_etxTitulo"
        android:text="@string/txtPages"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editarLibro_etxPubDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editarLibro_textView3"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editarLibro_textView4"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="date" />

    <TextView
        android:id="@+id/editarLibro_textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editarLibro_etxCantHojas"
        android:layout_below="@+id/editarLibro_etxPubDate"
        android:text="@string/txtPubDate"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editarLibro_etxCantHojas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editarLibro_etxIsbn"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editarLibro_textView3"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="number" />

</RelativeLayout>